php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #55225 PHP-GTK Segmentation fault on Quit
Submitted: 2011-07-18 05:56 UTC Modified: 2012-07-18 20:09 UTC
Votes:2
Avg. Score:4.0 ± 1.0
Reproduced:0 of 0 (0.0%)
From: falk dot herrmann at bike24 dot net Assigned: auroraeosrose (profile)
Status: Closed Package: PHP-GTK related
PHP Version: 5.3.7RC3 OS: Linux 2.6.38.6
Private report: No CVE-ID: None
 [2011-07-18 05:56 UTC] falk dot herrmann at bike24 dot net
Description:
------------
Every PHP-GTK application returns an segmentation fault on quit. Alt-F4, close via menu, or close button brings the same error. The program itself runs fine. Only the quit command returns segfault after the last line of code.

Return code: 139


Test script:
---------------
<?php

dl('php_gtk2.so');

$wnd = new GtkWindow();
$wnd->set_title('Hello world');
$wnd->connect_simple('destroy', array('gtk', 'main_quit'));
 
$lblHello = new GtkLabel("Hello world!'");
$wnd->add($lblHello);
 
$wnd->show_all();
Gtk::main();


Expected result:
----------------
Return code: 0


Actual result:
--------------
fh@psyco ~/php-gtk $ php -f hello-world.php
Segmentation fault
fh@psyco ~/php-gtk $ echo $?
139


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2011-07-19 18:37 UTC] felipe@php.net
-Status: Open +Status: Feedback
 [2011-07-19 18:37 UTC] felipe@php.net
Thank you for this bug report. To properly diagnose the problem, we
need a backtrace to see what is happening behind the scenes. To
find out how to generate a backtrace, please read
http://bugs.php.net/bugs-generating-backtrace.php for *NIX and
http://bugs.php.net/bugs-generating-backtrace-win32.php for Win32

Once you have generated a backtrace, please submit it to this bug
report and change the status back to "Open". Thank you for helping
us make PHP better.


 [2011-07-20 05:36 UTC] falk dot herrmann at bike24 dot net
-Status: Feedback +Status: Open
 [2011-07-20 05:36 UTC] falk dot herrmann at bike24 dot net
...
Core was generated by `php -f hello-world.php'.
Program terminated with signal 11, Segmentation fault.
[New process 11395]
#0  0x08310f1e in clean_module_class (ce=0x961d994, module_number=0xbf8b5e4c)
    at /usr/src/bApache2/php-5.3.7RC3/Zend/zend_API.c:2087
2087            if ((*ce)->type == ZEND_INTERNAL_CLASS && (*ce)->module->module_number == *module_number) {
(gdb) bt
#0  0x08310f1e in clean_module_class (ce=0x961d994, module_number=0xbf8b5e4c)
    at /usr/src/bApache2/php-5.3.7RC3/Zend/zend_API.c:2087
#1  0x0831add4 in zend_hash_apply_with_argument (ht=0x9468480, apply_func=0x8310f00 <clean_module_class>, 
    argument=0xbf8b5e4c) at /usr/src/bApache2/php-5.3.7RC3/Zend/zend_hash.c:698
#2  0x08314bb8 in module_destructor (module=0x94b3648) at /usr/src/bApache2/php-5.3.7RC3/Zend/zend_API.c:2097
#3  0x0831ac58 in zend_hash_apply_deleter (ht=0x87a4300, p=0x96119a8) at /usr/src/bApache2/php-5.3.7RC3/Zend/zend_hash.c:612
#4  0x0831ad5b in zend_hash_reverse_apply (ht=0x87a4300, apply_func=0x8310f60 <module_registry_unload_temp>)
    at /usr/src/bApache2/php-5.3.7RC3/Zend/zend_hash.c:761
#5  0x0830fa9e in zend_post_deactivate_modules () at /usr/src/bApache2/php-5.3.7RC3/Zend/zend.c:937
#6  0x082bf095 in php_request_shutdown (dummy=0x0) at /usr/src/bApache2/php-5.3.7RC3/main/main.c:1644
#7  0x083927b4 in main (argc=3, argv=0xbf8b62f4) at /usr/src/bApache2/php-5.3.7RC3/sapi/cli/php_cli.c:1363
 [2011-07-20 05:54 UTC] markskilbeck@php.net
What PHP-GTK version are you using? IIRC you need to be using SVN and
not the 2.0.1 release from the website.

http://svn.php.net/repository/gtk/php-gtk/trunk
 [2011-07-20 06:14 UTC] falk dot herrmann at bike24 dot net
I use the latest version of PHP-GTK from SVN:

psyco php-gtk-svn # svn info
Path: .
URL: http://svn.php.net/repository/gtk/php-gtk/trunk
Repository Root: http://svn.php.net/repository
Repository UUID: c90b9560-bf6c-de11-be94-00142212c4b1
Revision: 313467
Node Kind: directory
Schedule: normal
Last Changed Author: markskilbeck
Last Changed Rev: 307828
Last Changed Date: 2011-01-28 21:27:32 +0100 (Fri, 28 Jan 2011)
 [2011-09-08 16:02 UTC] falk dot herrmann at bike24 dot net
The same error on a complete different system: PHP 5.3.8 (sources) on an Ubuntu 11.04, GTK 2.24.4 libs, PHP-GTK from SVN. Also this is a 64-bit system. The bug report was created on an 32-bit Gentoo System.
 [2012-07-18 20:09 UTC] auroraeosrose@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.

This was actually an issue with php-gtk and dl (if you load the extension via .ini file you will not see this)

Fix for this commited to git
 [2012-07-18 20:09 UTC] auroraeosrose@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: auroraeosrose
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 09 22:00:02 2026 UTC