Fixes bug #55225 - segfault on cleanup after dl load

makes the module information for php-gtk
available in RINIT when the classes are registered
as a nice side effect that extension reflection works